--- a/trunk/mscore/mscore/editstaff.ui
+++ b/trunk/mscore/mscore/editstaff.ui
@@ -125,6 +125,13 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="4">
+         <widget class="QCheckBox" name="useTablature">
+          <property name="text">
+           <string>tablature</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
