--- a/trunk/mscore/mscore/chord.ui
+++ b/trunk/mscore/mscore/chord.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>423</width>
-    <height>253</height>
+    <width>311</width>
+    <height>212</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -129,10 +129,48 @@
          <number>6</number>
         </property>
         <item row="1" column="1">
-         <widget class="QListWidget" name="helplineList"/>
+         <widget class="QListWidget" name="helplineList">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+         </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QListWidget" name="notes"/>
+         <widget class="QListWidget" name="notes">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_2">
